# OlegBot

./: .gitignore  README.md  pyproject.toml
hackabot/: brain.py  config.yaml  dialogs.py  speach2text.py  telegram.py  text2speach.py
tests/: test_hackabot.py
