[tool.poetry]
name = "hackabot"
version = "0.1.0"
description = ""
authors = ["IDenra <denrazv@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
granula = "^2018.2.8"
requests = "^2.24.0"
PyTelegramBotAPI = "^3.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
